# AGA-devel

userapps/broadcom/adslctl/: adslctl_AGW2-PLUS_save
userapps/broadcom/atmctl/: Makefile  atmctl_96348GW_save
userapps/broadcom/cfm/: Makefile  cfm_96348GWB_save  cfm_AGW2-PLUS_save  cfm_AGW2-PLUS_save.bad
userapps/broadcom/ddnsd/: ddnsd_AGW2-PLUS_save
userapps/broadcom/dnsprobe/: dnsprobe_96348GWB_save
userapps/broadcom/epittcp/: epi_ttcp_96348GWB_save
userapps/broadcom/ethctl/: ethctl_96348GW_save
userapps/broadcom/hotplug/: Makefile  hotplug_96348GW_save
userapps/broadcom/igmp/: igmp_96348GWB_save
userapps/broadcom/ippd.ori/: Makefile  ippd_AGW2-PLUS_save
userapps/roleo/webcam_server-0.50/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.gh  Makefile.in  Makefile.ori  NEWS  README  config.cache  config.status  configure  configure.in  go1  go2  mkinstalldirs
userapps/roleo/webcam_server-0.50/man/: Makefile  Makefile.am  Makefile.in  webcam_server.1
userapps/roleo/webcam_server-0.50/src/: Makefile  Makefile.am  Makefile.in  camera.c  camera.h  client.c  client.h  filters.c  filters.h  go2  grabber.c  grabber.h  image.c  image.h  imgqueue.c  imgqueue.h  jdatabuf.c  jdatabuf.h  unpalette.c  unpalette.h  version.c  version.h  watchdog.c  watchdog.h  webcam_server.c  webcam_server.h
userapps/roleo/webcam_server-0.50/src/.deps/: camera.P  client.P  filters.P  grabber.P  image.P  imgqueue.P  jdatabuf.P  unpalette.P  version.P  watchdog.P  webcam_server.P
userapps/roleo/webcam_server-0.50/src/client/: ImageCanvas.java  ImageDownloader.java  webcam.html
(+711 files in other folders)
