AC_INIT(src/webcam_server.c)
AM_INIT_AUTOMAKE(webcam_server, 0.50)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_AWK
AC_PROG_GCC_TRADITIONAL
AC_PROG_LN_S

AC_CHECK_FUNCS([ftime inet_ntoa malloc memset munmap select socket strchr strstr])
AC_FUNC_MMAP
AC_FUNC_STRFTIME

AC_CHECK_HEADER(jpeglib.h,, [AC_MSG_ERROR([Could not find jpeglib.h])])
AC_CHECK_HEADER(linux/videodev.h,, [AC_MSG_ERROR([Could not find linux/videodev.h])])
AC_CHECK_LIB(pthread, pthread_create,, [AC_MSG_ERROR([Could not find posix thread lib])])

AC_CHECK_HEADERS([arpa/inet.h fcntl.h netinet/in.h stdlib.h string.h sys/ioctl.h sys/socket.h sys/time.h sys/timeb.h unistd.h])
AC_HEADER_STDC
AC_HEADER_TIME

AC_STRUCT_TM
AC_TYPE_SIGNAL

AC_OUTPUT(Makefile src/Makefile man/Makefile)
